--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.6.8",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
